Final Deliverables/Project Code_/kubernetes/hireup_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hireup-app-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: hireup-app
